# YoutubeSummarizer

./: .flake8  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  youtube_transcript.1
tests/: test_main.py
